added docs for products endpoint
